--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.0",
+    "@types/mongoose": "^5.7.30",
     "@types/node": "^14.0.20",
     "@types/socket.io": "^2.1.8",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
@@ -41,6 +42,7 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "mongoose": "^5.9.22",
     "socket.io": "^2.3.0",
     "twit": "^2.2.11"
   }
